--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,6 +9,7 @@ spring:
   jpa:
     hibernate:
       ddl-auto: update
+    open-in-view: false
   flyway:
     enabled: true
     locations: classpath:db/migration
